moderniser la classe offscreen, fix #4658

--- a/css/clear.css
+++ b/css/clear.css
@@ -73,8 +73,13 @@ hr.clear {
 /* Not visible */
 .offscreen {
   position: absolute;
-  left: -999em;
-  height: 1%;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
 .hidden {
   visibility: hidden;
